--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: adovee
+name: adovee_partner
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -23,18 +23,34 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  
-  intl_phone_number_input: ^0.4.4
-  #flappy_search_bar: ^1.7.2
-  #google_sign_in: ^4.5.1
-  #flutter_facebook_login: ^3.0.0
-  #http: ^0.12.1
-  #circular_profile_avatar: ^1.0.6
-  #flutter_icons: ^1.1.0
-  #carousel_pro: ^1.0.0
+
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+
+  intl_phone_number_input: ^0.4.4
+  flappy_search_bar: ^1.7.2
+  google_sign_in: ^4.5.1
+  #flutter_facebook_login: ^3.0.0
+  http: ^0.12.1
+  circular_profile_avatar: ^1.0.6
+  flutter_icons: ^1.1.0
+  flutter_calendar_carousel: ^1.4.12
+  syncfusion_flutter_calendar: ^18.1.56-beta
+  # #excel: ^1.0.9
+  date_range_picker: ^1.0.6
+  carousel_pro: ^1.0.0
+  charts_flutter: ^0.9.0
+  horizontal_data_table: ^1.0.5+3
+  fragment_navigate: ^1.0.0+1
+  #international_phone_input: ^1.0.4
+  libphonenumber: ^1.0.1
+  equatable: ^1.2.0
+  fluttertoast: ^4.0.1
+  flutter_speed_dial: ^1.2.5
+  country_code_picker: ^1.4.0
+  datetime_picker_formfield: ^1.0.0
 
 dev_dependencies:
   flutter_test:
@@ -62,7 +78,6 @@ flutter:
     - assets/images/41.jpg
     - assets/images/42.jpg
     - assets/images/profile_logo.jpg
-
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
