--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   flutter_speed_dial: ^1.2.5
   country_code_picker: ^1.4.0
   datetime_picker_formfield: ^1.0.0
+  # flutter_spinkit: ^4.1.2+1
+  #auto_suggestion_text_field: ^0.1.1
 
 dev_dependencies:
   flutter_test:
